<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/scanning_device"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_rescan"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescan_device" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pin_hint"
            android:inputType="numberPassword"
            android:maxLength="16" />

        <Button
            android:id="@+id/btn_save_pin"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_pin" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_unlock"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_unlock" />
</LinearLayout>
